--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
 
     <!-- Main UI -->
     <string name="camera_tab">Camera</string>
+    <string name="streaming_tab">Streaming</string>
     <string name="settings_tab">Settings</string>
-    <string name="ar_tab">AR Controls</string>
 
     <!-- Streaming Options -->
     <string name="streaming_options_title">Select Streaming Mode</string>
@@ -32,95 +32,45 @@
     <string name="ar_installing">Installing AR services...</string>
 
     <!-- Settings -->
+    <string name="camera_settings_title">Camera Settings</string>
+    <string name="streaming_settings_title">Streaming Settings</string>
+    <string name="app_settings_title">App Settings</string>
+    <string name="about_title">About</string>
     <string name="settings_streaming_quality">Streaming Quality</string>
     <string name="settings_quality_low">Low (480p)</string>
     <string name="settings_quality_medium">Medium (720p)</string>
     <string name="settings_quality_high">High (1080p)</string>
-    <string name="settings_streaming_protocol">Streaming Protocol</string>
+    <string name="settings_port">Server Port</string>
+    <string name="settings_dark_mode">Dark Mode</string>
+    <string name="settings_auto_focus">Auto Focus</string>
+    <string name="settings_flash_mode">Flash Mode</string>
+    <string name="settings_flash_off">Off</string>
+    <string name="settings_flash_on">On</string>
+    <string name="settings_flash_auto">Auto</string>
+    <string name="settings_version">Version %1$s</string>
     <string name="settings_protocol_rtsp">RTSP</string>
     <string name="settings_protocol_webrtc">WebRTC</string>
-    <string name="settings_network_info">Network Information</string>
-    <string name="settings_enable_ar">Enable AR</string>
-    <string name="settings_dark_mode">Dark Mode</string>
-    <string name="settings_port">Server Port</string>
-    <string name="settings_about">About</string>
-    <string name="settings_version">Version %1$s</string>
-
-    <!-- Streaming Info -->
-    <string name="stream_url">Stream URL: %1$s</string>
-    <string name="stream_status">Status: %1$s</string>
-    <string name="stream_clients">Connected Clients: %1$d</string>
-    <string name="stream_bitrate">Bitrate: %1$s</string>
-    <string name="stream_resolution">Resolution: %1$s</string>
-    <string name="stream_fps">FPS: %1$d</string>
-
-    <!-- Network -->
-    <string name="network_ip">IP Address: %1$s</string>
-    <string name="network_ssid">Wi-Fi: %1$s</string>
-    <string name="network_not_connected">Not Connected</string>
+    <string name="dialog_port_hint">Enter port (1024-65535)</string>
+    <string name="about_content">AR Camera Streamer is an application that allows you to stream your camera feed with augmented reality features.\n\nVersion: %1$s</string>
 
     <!-- Permissions -->
-    <string name="permission_camera_rationale">Camera permission is required for streaming</string>
-    <string name="permission_audio_rationale">Microphone permission is required for audio streaming</string>
-    <string name="permission_storage_rationale">Storage permission is required for saving captures</string>
     <string name="permission_required">Permission Required</string>
     <string name="permission_denied">Permission Denied</string>
     <string name="permission_grant">Grant</string>
     <string name="permission_cancel">Cancel</string>
     <string name="permission_settings">Settings</string>
-
-    <!-- Status Messages -->
-    <string name="status_streaming">Streaming</string>
-    <string name="status_ready">Ready</string>
-    <string name="status_connecting">Connecting…</string>
-    <string name="status_error">Error</string>
-    <string name="status_ar_initializing">Initializing AR…</string>
-    <string name="status_ar_ready">AR Ready</string>
-    <string name="status_ar_tracking">AR Tracking</string>
-
-    <!-- Errors -->
-    <string name="error_camera_unavailable">Camera unavailable</string>
-    <string name="error_ar_unavailable">AR features unavailable on this device</string>
-    <string name="error_network">Network error</string>
-    <string name="error_streaming">Streaming error</string>
-    <string name="error_port_in_use">Port is already in use</string>
-    <string name="error_settings">Error changing AR settings</string>
-
-    <!-- Notifications -->
-    <string name="notification_streaming">AR Camera Streaming</string>
-    <string name="notification_streaming_text">Tap to return to app</string>
+    <string name="permission_camera_rationale">Camera permission is required for streaming</string>
+    <string name="permission_audio_rationale">Microphone permission is required for audio streaming</string>
+    <string name="permission_storage_rationale">Storage permission is required for saving captures</string>
 
     <!-- Actions -->
-    <string name="action_stop">Stop</string>
-    <string name="action_start">Start</string>
-    <string name="action_close">Close</string>
     <string name="action_ok">OK</string>
     <string name="action_cancel">Cancel</string>
     <string name="action_save">Save</string>
+    <string name="action_stop">Stop</string>
+    <string name="action_start">Start</string>
 
-    <!-- AR Settings -->
-    <string name="depth_enabled">Depth mode enabled</string>
-    <string name="depth_disabled">Depth mode disabled</string>
-    <string name="depth_not_supported">Depth is not supported on this device</string>
-    <string name="plane_detection_enabled">Plane detection enabled</string>
-    <string name="plane_detection_disabled">Plane detection disabled</string>
-    <string name="autofocus_enabled">Auto focus enabled</string>
-    <string name="autofocus_disabled">Auto focus disabled</string>
-    <string name="cloud_anchors_enabled">Cloud anchors enabled</string>
-    <string name="cloud_anchors_disabled">Cloud anchors disabled</string>
-    <string name="checking_availability">Checking AR availability…</string>
-
-    <!-- Added for rounded_status_background -->
-    <string name="status_initializing">Initializing</string>
-
-
-    <string name="dialog_port_hint">Enter port (1024-65535)</string>
-    <string name="error_invalid_port">Invalid port number. Port must be between 1024 and 65535.</string>
-    <string name="about_content">AR Camera Streamer is an application that allows you to stream your camera feed with augmented reality features.\n\nVersion: %1$s</string>
-
-
-
-
+    <!-- Recovery Activity -->
     <string name="restart_app">Restart App</string>
     <string name="restart_safe_mode">Restart in Safe Mode</string>
     <string name="report_crash">Report Issue</string>
@@ -132,4 +82,18 @@
     <string name="solution_depth">Depth sensing error. Try using the app in a well-lit area with textured surfaces.</string>
     <string name="solution_generic">The app encountered an unexpected error. Please try restarting.</string>
     <string name="email_not_available">Email app not available. Please restart the app.</string>
+
+    <!-- Card dimensions reference -->
+    <string name="card_selected_stroke_width">card_selected_stroke_width</string>
+
+    <!-- Streaming Info -->
+    <string name="stream_url">Stream URL: %1$s</string>
+    <string name="stream_status">Status: %1$s</string>
+    <string name="stream_clients">Connected Clients: %1$d</string>
+    <string name="stream_bitrate">Bitrate: %1$s</string>
+    <string name="stream_resolution">Resolution: %1$s</string>
+    <string name="stream_fps">FPS: %1$d</string>
+    <string name="status_streaming">Streaming</string>
+    <string name="notification_streaming">AR Camera Streaming</string>
+    <string name="notification_streaming_text">Tap to return to app</string>
 </resources>
